# tinderbox-cluster

./: .gitignore  README.txt  buildbot.tac  gentooci.cfg  logparser.json  master.cfg  requirements.txt  setup.cfg  setup.py
buildbot_gentoo_ci/config/: builders.py  buildfactory.py  buildfactorys.py  change_source.py  config.py  reporters.py  schedulers.py  service.py  workers.py
buildbot_gentoo_ci/db/: builds.py  categorys.py  connector.py  keywords.py  model.py  packages.py  portages.py  projects.py  repositorys.py  versions.py
buildbot_gentoo_ci/logs/: log_parser.py
buildbot_gentoo_ci/reporters/: irc.py
buildbot_gentoo_ci/scripts/: update_db.py
buildbot_gentoo_ci/steps/: bugs.py  builders.py  category.py  logs.py  (+8 more)
conf/: tbc.conf
depoly/: db_add_riscv.sh  db_init.sh
docker/: GentooBuildbotWorker.Dockerfile  GentooBuildbotWorkerDefault.Dockerfile
ebuild/: tbc-9999.ebuild
etc/: gosbs.conf
gosbs/: baserpc.py  config.py  context.py  debugger.py  exception.py  i18n.py  manager.py  middleware.py  policy.py  profiler.py  rpc.py  service.py  utils.py  version.py
patches/: bb-gitlab.patch  portage.patch  repoman.patch  secretstring.patch
py/: log_parser.py
sql/: categorys.sql  data_dump.sql  gentoo_ci_schema.sql  gosbs.sql  keywords.sql  portage_makeconf.sql  project.sql  projects_emerge_options.sql  projects_env.sql  projects_makeconf.sql  projects_package.sql  projects_pattern.sql  projects_portage.sql  projects_repositorys.sql  projects_workers.sql  repositorys.sql  repositorys_gitpullers.sql  search_pattern.sql  structure_dump.sql  workers.sql
(+155 files in other folders)
