[metadata]
name = gosbs
summary = Gentoo OpenStack Build System
description-file =
    README.rst
author = Gentoo tinderbox clyster project
author-email = tinderbox-cluster@gentoo.org
home-page = https://wiki.gentoo.org/wiki/Project:Tinderbox-cluster
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[extras]
osprofiler =
    osprofiler>=1.4.0 # Apache-2.0

[files]
packages =
    gosbs

[entry_points]
console_scripts =
    gosbs-scheduler = gosbs.cmd.scheduler:main
